edited readme to include description. corrected header layout on mobile view

--- a/style.css
+++ b/style.css
@@ -13,14 +13,15 @@ header {
 }
 
 .logo {
-  width: 150px;
+  width: 25%;
+  max-width: 142px;
   border-radius: 10%;
   margin: 0 2px;
 }
 
 header h1 {
   font-family: 'Indie Flower', cursive;
-  font-size: 48px; 
+  font-size: 40px; 
   margin: 20px 0;
 }
 
@@ -41,8 +42,8 @@ nav a :hover {
 
 .hamburger {
   display: flex; 
-  width: 30px;
-  height: 30px; 
+  width: 25px;
+  height: 25px; 
   flex-direction: column;
   justify-content: space-between;
 }
@@ -182,6 +183,21 @@ label {
 /* MEDIA QUERY TABLET */
 
 @media (min-width: 768px) {
+  header h1 {
+    font-size: 48px;
+  }
+
+  .logo {
+    width: 150px;
+    margin-left: 10px;
+  }
+
+  .hamburger { 
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+  }
+  
   .main-news .main-flex-box {
     flex-direction: row;
     margin-top: 12px;
@@ -223,7 +239,6 @@ label {
     width: 350px;
     font-size: 13px;
     font-family: 'Roboto Mono', monospace;
-    margin-right: 5px;
   }
 
   header {
